--- a/states_oscp/ray-caster.yml
+++ b/states_oscp/ray-caster.yml
@@ -139,48 +139,258 @@ patch: !ruby/hash:HashObj
       :default_to: 0
   :defaults: 
 client_state:
+- :address: "/o_aim_sc"
+  :vals:
+  - 0.5429999828338623
 - :address: "/o_aim_x"
   :vals:
-  - -0.042986512184143066
+  - 0.10300000011920929
 - :address: "/o_aim_y"
   :vals:
-  - -0.4526064395904541
-- :address: "/o_col1b"
-  :vals:
-  - 0.6789100170135498
-- :address: "/o_col1g"
-  :vals:
-  - 0.6421801447868347
-- :address: "/o_col1r"
-  :vals:
-  - 0.9502370357513428
-- :address: "/o_col2b"
-  :vals:
-  - 0.8767772912979126
-- :address: "/o_col2g"
-  :vals:
-  - 0.22037918865680695
-- :address: "/o_col2r"
-  :vals:
-  - 0.5438389182090759
-- :address: "/o_col3g"
+  - 0.1587679386138916
+- :address: "/o_bifad1"
   :vals:
   - 0.0
+- :address: "/o_bifad2"
+  :vals:
+  - 0.0
+- :address: "/o_birot1"
+  :vals:
+  - 0.0430000014603138
+- :address: "/o_birot2"
+  :vals:
+  - 0.04100000113248825
+- :address: "/o_blue"
+  :vals:
+  - 0.0
+- :address: "/o_col1b"
+  :vals:
+  - 1.0
+- :address: "/o_col1g"
+  :vals:
+  - 0.794
+- :address: "/o_col1r"
+  :vals:
+  - 0.281
+- :address: "/o_col2b"
+  :vals:
+  - 0.8980000019073486
+- :address: "/o_col2g"
+  :vals:
+  - 0.6940000057220459
+- :address: "/o_col2r"
+  :vals:
+  - 0.43299999833106995
+- :address: "/o_col3b"
+  :vals:
+  - 0.765999972820282
+- :address: "/o_col3g"
+  :vals:
+  - 0.6819999814033508
+- :address: "/o_col3r"
+  :vals:
+  - 0.5389999747276306
+- :address: "/o_col4b"
+  :vals:
+  - 0.8109999895095825
+- :address: "/o_col4g"
+  :vals:
+  - 0.722000002861023
+- :address: "/o_col4r"
+  :vals:
+  - 0.5690000057220459
+- :address: "/o_col5b"
+  :vals:
+  - 0.9440000057220459
+- :address: "/o_col5g"
+  :vals:
+  - 0.8240000009536743
+- :address: "/o_col5r"
+  :vals:
+  - 0.6420000195503235
+- :address: "/o_col6b"
+  :vals:
+  - 0.8889999985694885
+- :address: "/o_col6g"
+  :vals:
+  - 0.8029999732971191
+- :address: "/o_col6r"
+  :vals:
+  - 0.6650000214576721
 - :address: "/o_distance"
   :vals:
-  - -0.6113742589950562
+  - 0.28200000524520874
+- :address: "/o_exp"
+  :vals:
+  - 0.968
+- :address: "/o_fad1"
+  :vals:
+  - 0.616
+- :address: "/o_fad2"
+  :vals:
+  - 0.0
+- :address: "/o_fad3"
+  :vals:
+  - 0.0
+- :address: "/o_fad4"
+  :vals:
+  - 0.0
+- :address: "/o_fad5"
+  :vals:
+  - 0.0
+- :address: "/o_fad6"
+  :vals:
+  - 0.0
+- :address: "/o_float1_1"
+  :vals:
+  - 0.0
+- :address: "/o_float1_2"
+  :vals:
+  - 0.0
+- :address: "/o_float1_3"
+  :vals:
+  - 0.0
+- :address: "/o_float1_4"
+  :vals:
+  - 0.0
+- :address: "/o_float5w"
+  :vals:
+  - 0.0
+- :address: "/o_float5x"
+  :vals:
+  - 0.0
+- :address: "/o_float5y"
+  :vals:
+  - 0.0
+- :address: "/o_float5z"
+  :vals:
+  - 0.0
+- :address: "/o_gam_b"
+  :vals:
+  - 0.0
+- :address: "/o_gam_g"
+  :vals:
+  - 0.0
+- :address: "/o_gam_r"
+  :vals:
+  - 0.0
+- :address: "/o_green"
+  :vals:
+  - 0.0
+- :address: "/o_lbfad1"
+  :vals:
+  - 0.0
+- :address: "/o_lfad1"
+  :vals:
+  - 0.0
+- :address: "/o_lfad2"
+  :vals:
+  - 0.0
+- :address: "/o_lfad3"
+  :vals:
+  - 0.0
+- :address: "/o_lmix1"
+  :vals:
+  - 0.0
+- :address: "/o_lmix2"
+  :vals:
+  - 0.0
+- :address: "/o_lmix3"
+  :vals:
+  - 0.0
+- :address: "/o_long"
+  :vals:
+  - 0.354
+- :address: "/o_mfad1"
+  :vals:
+  - 0.0
+- :address: "/o_mfad2"
+  :vals:
+  - 0.0
+- :address: "/o_mix1"
+  :vals:
+  - 0.0
+- :address: "/o_mix2"
+  :vals:
+  - 0.0
+- :address: "/o_mix3"
+  :vals:
+  - 0.0
+- :address: "/o_mix4"
+  :vals:
+  - 0.0
+- :address: "/o_mrot1"
+  :vals:
+  - 0.0
+- :address: "/o_mrot2"
+  :vals:
+  - 0.0
+- :address: "/o_mrot3"
+  :vals:
+  - 0.0
+- :address: "/o_mrot4"
+  :vals:
+  - 0.0
+- :address: "/o_multixy_1"
+  :vals:
+  - 0.0
+  - 0.0
+- :address: "/o_multixy_2"
+  :vals:
+  - 0.0
+  - 0.0
+- :address: "/o_multixy_3"
+  :vals:
+  - 0.0
+  - 0.0
+- :address: "/o_multixy_4"
+  :vals:
+  - 0.0
+  - 0.0
+- :address: "/o_multixy_5"
+  :vals:
+  - 0.0
+  - 0.0
 - :address: "/o_pan"
   :vals:
-  - 1.0
-  - 0.07121658325195312
+  - -0.1829649806022644
+  - 0.5400593280792236
+- :address: "/o_pan_sc"
+  :vals:
+  - 0.031013093888759613
+- :address: "/o_red"
+  :vals:
+  - 0.0
 - :address: "/o_rot1"
   :vals:
-  - 1.0
+  - 0.3779999911785126
 - :address: "/o_rot2"
   :vals:
-  - 0.5994517207145691
+  - 0.0
 - :address: "/o_scale"
   :vals:
-  - 6.779675006866455
+  - 6.78000020980835
+- :address: "/o_tog1"
+  :vals:
+  - 0.0
+- :address: "/o_tog2"
+  :vals:
+  - 0.0
+- :address: "/o_tog3"
+  :vals:
+  - 0.0
+- :address: "/o_tog4"
+  :vals:
+  - 0.0
+- :address: "/o_tog5"
+  :vals:
+  - 0.0
+- :address: "/slider"
+  :vals:
+  - 0.0
+- :address: "/u_resolution"
+  :vals:
+  - 501.0
+  - 480.0
 client_ip: 192.168.1.42
 client_port: 9000
