--- a/states_oscp/anti-caster.yml
+++ b/states_oscp/anti-caster.yml
@@ -146,32 +146,14 @@ patch: !ruby/hash:HashObj
       :default_to: 0
   :defaults: 
 client_state:
-- :address: "/o_aim_sc"
+- :address: "/o_distance"
   :vals:
-  - 0.48899999260902405
-- :address: "/o_aim_y"
-  :vals:
-  - 0.01899999938905239
-- :address: "/o_exp"
-  :vals:
-  - 1.0
+  - 0.6290000081062317
 - :address: "/o_fad1"
   :vals:
-  - 0.06700000166893005
-- :address: "/o_fad2"
+  - 1.0
+- :address: "/o_scale"
   :vals:
-  - 0.0
-- :address: "/o_fad3"
-  :vals:
-  - 0.8130000233650208
-- :address: "/o_long"
-  :vals:
-  - 0.08299999684095383
-- :address: "/o_pan_x"
-  :vals:
-  - 0.0020000000949949026
-- :address: "/o_pan_y"
-  :vals:
-  - 0.014999999664723873
+  - 7.843999862670898
 client_ip: 127.0.0.1
-client_port: 57605
+client_port: 60433
